Refactor: Restructured project to use src folder, fixed onboarding flow, and updated i18n providers

--- a/Key-Frontend/tsconfig.json
+++ b/Key-Frontend/tsconfig.json
@@ -32,7 +32,10 @@
     "strictNullChecks": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./"
+    "rootDir": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -45,7 +48,6 @@
   "exclude": [
     "node_modules",
     "dist",
-    "src",
     "**/*.test.tsx"
   ]
 }
